--- a/index.html
+++ b/index.html
@@ -63,14 +63,15 @@
                         <h3 id="rowHeading">Lorem, ipsum dolor.</h3>
                         <p class="row-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero accusantium consequatur ea adipisci expedita quis rerum voluptatum maxime ratione nulla.</p>
                     </div>
-                    <div id="box"></div>
-                    <p class="row-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum, aut.</p>
-                    <h3 id="rowHeading">Lorem, ipsum dolor.</h3>
-                    <p class="row-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero accusantium consequatur ea adipisci expedita quis rerum voluptatum maxime ratione nulla.</p>
-                    <p class="row-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum, aut.</p>
-                    <h3 id="rowHeading">Lorem, ipsum dolor.</h3>
-                    <p class="row-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero accusantium consequatur ea adipisci expedita quis rerum voluptatum maxime ratione nulla.</p>
-                    <p class="row-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum, aut.</p>
+                    <div id="box">
+                        <p class="row-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum, aut.</p>
+                        <h3 id="rowHeading">Lorem, ipsum dolor.</h3>
+                        <p class="row-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero accusantium consequatur ea adipisci expedita quis rerum voluptatum maxime ratione nulla.</p>
+                        <p class="row-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum, aut.</p>
+                        <h3 id="rowHeading">Lorem, ipsum dolor.</h3>
+                        <p class="row-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero accusantium consequatur ea adipisci expedita quis rerum voluptatum maxime ratione nulla.</p>
+                        <p class="row-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum, aut.</p>
+                    </div>
                 </div>
             </div>
         </section>
