--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
     <section id="headerSection">
         <div class="container">
             <div class="row" id="row1">
-                <div class="col">
-                    <h1 class="heading text-light">Bloom Landing Page</h1>
+                <h1 class="heading text-light m">Bloom Landing Page</h1>
                     <nav id="topNav"> 
                         <ul class="nav justify-content-end">
                             <li class="nav-item">
@@ -31,7 +30,6 @@
                             </li>
                         </ul>
                     </nav>
-                </div>
             </div>
         </div>
     </section>
@@ -41,67 +39,86 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-6">
-                        <div id="welcomeBox">
                             <h2 class="welcome-heading text-light">Welcome to our Landing Page!</h2>
                             <p class="welcome-text text-light">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vero aperiam exercitationem magni quae cumque ad perspiciatis ut optio officiis, quibusdam molestias totam illo eligendi saepe earum libero expedita repellat ipsam omnis eaque?</p>
                             <p class="welcome-text text-light">Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis rerum accusamus odio, est deserunt nulla laudantium quae.</p>                        
-                        </div>
                     </div>
                         <div id="block-btn">
                             <button class="btn btn-secondary btn-more text-light">Learn More</button>
                             <button class="btn btn-secondary btn-more text-light">Download Now</button>
                         </div>
-                    <div id="imageBox">
-                        <img src="/images/laptop.jpg" alt="Laptop" class="computer-image img-fluid d-block mx-auto mx-md-0 ms-md-auto w-50" />
-                    </div>
+                        <div class="col-md-9">
+                            <div id="imageBox">
+                                <img src="/images/laptop.jpg" alt="Laptop" class="computer-image img-fluid d-block mx-auto mx-md-0 ms-md-auto w-50" />
+                            </div>
+                        </div>
                 </div>
         </section>
         <section class="section" id="section2">
             <div class="container">
                 <div class="row">
-                    <div id="box">
-                        <h3 id="rowHeading">Lorem, ipsum dolor.</h3>
-                        <p class="row-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero accusantium consequatur ea adipisci expedita quis rerum voluptatum maxime ratione nulla.</p>
+                    <div class="col-md-4">
+                        <div id="box">
+                            <h3 id="rowHeading">
+                                <i class="bi bi-cloud-download-fill"></i></i> Lorem, ipsum dolor.
+                            </h3>
+                            <p class="row-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero accusantium consequatur ea adipisci expedita quis rerum voluptatum maxime ratione nulla.</p>
+                            <p class="row-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum, aut.</p>
+                        </div>
                     </div>
-                    <div id="box">
-                        <p class="row-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum, aut.</p>
-                        <h3 id="rowHeading">Lorem, ipsum dolor.</h3>
+                    <div class="col-md-4">
+                        <h3 id="rowHeading">
+                            <i class="bi bi-chat-right-fill"></i>
+                            Lorem, ipsum dolor.
+                        </h3>
                         <p class="row-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero accusantium consequatur ea adipisci expedita quis rerum voluptatum maxime ratione nulla.</p>
                         <p class="row-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum, aut.</p>
-                        <h3 id="rowHeading">Lorem, ipsum dolor.</h3>
+                    </div>
+                    <div class="col-md-4">
+                        <h3 id="rowHeading">
+                            <i class="bi bi-bookmark-star-fill"></i>
+                            Lorem, ipsum dolor.
+                        </h3>
                         <p class="row-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero accusantium consequatur ea adipisci expedita quis rerum voluptatum maxime ratione nulla.</p>
                         <p class="row-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum, aut.</p>
                     </div>
                 </div>
             </div>
+        </div>
         </section>
         <div id="pinkDiv"></div>
         <section class="section" id="productsSection">
             <div class="container">
                 <div class="row">
-                    <h3 class="product-text">Checkout our Products!</h3>
-                    <div id="box1S3">
-                        <div id="block" class="block1"></div>
-                        <div id="block" class="block2"></div>
-                        <div id="block" class="block3"></div>
-                        <div id="block" class="block4"></div>
+                    <div class="col-m-6">
+                        <h3 class="product-text">Checkout our Products!</h3>
+                        <div id="box1S3 d-inline-flex">
+                            <div id="block" class="block1"></div>
+                            <div id="block" class="block2"></div>
+                            <div id="block" class="block3"></div>
+                            <div id="block" class="block4"></div>
+                        </div>
                     </div>
-                    <div id="cilentBox">
-                        <h3 class="client-header">What our clients are saying...</h3>
-                    <ul>
-                        <li class="clients-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio, eligendi nihil. Nihil provident tenetur libero? <span class="span-text">-John Smith</span></li>
-                        <li class="clients-text">Tenetur nihil, dignissimos repellendus sed consequuntur harum fugit? Similique commodi at ratione voluptate quam eos. <span class="span-text">-John Smith</span></li>
-                        <li class="clients-text">Sint expedita dolores asperiores dolorum autem accusantium ipsa, aut eos doloribus soluta, saepe pariatur sequi. <span class="span-text">-John Smith</span></li>
-                    </ul>
+                </div>
+                    <div class="row d-flex justify-content-end">
+                        <div class="col-md-4">
+                            <h3 class="client-header py-4 mx-4">What our clients are saying...</h3>
+                            <ul class="client-list">
+                                <li class="clients-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio, eligendi nihil. Nihil provident tenetur libero? <span class="span-text">-John Smith</span></li>
+                                <li class="clients-text">Tenetur nihil, dignissimos repellendus sed consequuntur harum fugit? Similique commodi at ratione voluptate quam eos. <span class="span-text">-John Smith</span></li>
+                                <li class="clients-text">Sint expedita dolores asperiores dolorum autem accusantium ipsa, aut eos doloribus soluta, saepe pariatur sequi. <span class="span-text">-John Smith</span></li>
+                            </ul>
+                        </div>
                     </div>
                 </div>
             </div>
+        </div>
         </section>
     </main>
     <footer class="footer" id="footer">
         <div class="container">
             <div class="row">
-                <p class="fs-text">Copyright &copy; 2012 Bloom Landing &middot; All rights reserved</p> 
+                <p class="fs-text text-light">Copyright &copy; 2012 Bloom Landing &middot; All rights reserved</p> 
                 <nav id="bottomNav"> 
                     <ul class="nav justify-content-end">
                         <li class="nav-item">
