--- a/index.html
+++ b/index.html
@@ -16,9 +16,12 @@
     <section class="section" id="headerSection">
         <div class="container">
             <div class="row" id="row1">
-                <h1 class="heading text-light">Bloom Landing Page</h1>
+                <div class="col-sm-4">
+                    <h1 class="heading text-light py-2">Bloom Landing Page</h1>
+                </div>
+                <div class="col-md-7">
                     <nav id="navTop"> 
-                        <ul class="nav d-md-flex justify-content-end">
+                        <ul class="nav justify-content-end py-2">
                             <li class="nav-item">
                                 <a href="#" class="nav-link text-light"><i class="bi bi-facebook"></i></a>
                             </li>
@@ -30,6 +33,7 @@
                             </li>
                         </ul>
                     </nav>
+                </div>
             </div>
         </div>
     </section>
@@ -41,17 +45,19 @@
                     <div class="col-md-6">
                         <h2 class="welcome-heading text-light">Welcome to our Landing Page!</h2>
                         <p class="welcome-text text-light">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vero aperiam exercitationem magni quae cumque ad perspiciatis ut optio officiis, quibusdam molestias totam illo eligendi saepe earum libero expedita repellat ipsam omnis eaque?</p>
-                        <p class="welcome-text text-light">Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis rerum accusamus odio, est deserunt nulla laudantium quae.</p>                        
+                        <p class="welcome-text text-light">Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis rerum accusamus odio, est deserunt nulla laudantium quae.</p>                          
                         <div id="block-btn">
                             <button class="btn btn-secondary btn-more text-light py-2 mx-2">Learn More</button>
                             <button class="btn btn-secondary btn-more text-light py-2 mx-2">Download Now</button>
                         </div>
-                    <div id="imageBox">
-                        <img src="/images/laptop.jpg" alt="Laptop" class="computer-image img-fluid w-75 d-block mx-auto mx-md-0 ms-md-auto" />
+                    </div>
+                    <div class="col-sm-6">
+                        <div id="imageBox">
+                            <img src="/images/laptop.jpg" alt="Laptop" class="computer-image img-fluid w-75 d-block mx-auto mx-md-0 ms-md-auto" />
+                        </div>
                     </div>
                     </div>
                 <div>
-                </div>
             </div>
         </section>
         <section class="section" id="section2">
@@ -89,52 +95,52 @@
         <section class="section" id="productsSection">
         <div class="container">
             <div class="row">
-                <h3 class="product-text">Checkout our Products!</h3>
-                    <div class="col-sm-6 g-4">
-                        <div id="block" class="product mx-auto mx-md-0"></div>   
+                <div class="col-md-8">
+                    <h3 class="product-text py-2">Checkout our Products!</h3>
+                </div>
+                        <div class="col-sm-6 g-4">
+                            <div id="block" class="product mx-auto mx-md-0"></div>   
+                        </div>
+                        <div class="col-sm-6 g-4">
+                            <div id="block" class="product mx-auto mx-md-0"></div>
+                        </div>
+                        <div class="col-sm-6 g-4">
+                            <div id="block" class="product mx-auto mx-md-0"></div>
+                        </div>
+                        <div class="col-sm-6 g-4">
+                            <div id="block" class="product mx-auto mx-md-0"></div>
+                        </div>
+                    <div class="col-md-4">
+                        <h3 class="client-header py-4 mx-4">What our clients are saying...</h3>
+                            <ul class="client-list">
+                                <li class="clients-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio, eligendi nihil. Nihil provident tenetur libero? <span class="span-text">-John Smith</span></li>
+                                <li class="clients-text">Tenetur nihil, dignissimos repellendus sed consequuntur harum fugit? Similique commodi at ratione voluptate quam eos. <span class="span-text">-John Smith</span></li>
+                                <li class="clients-text">Sint expedita dolores asperiores dolorum autem accusantium ipsa, aut eos doloribus soluta, saepe pariatur sequi. <span class="span-text">-John Smith</span></li>
+                            </ul>
                     </div>
-                    <div class="col-sm-6 g-4">
-                        <div id="block" class="product mx-auto mx-md-0"></div>
-                    </div>
-                    <div class="col-sm-6 g-4">
-                        <div id="block" class="product mx-auto mx-md-0"></div>
-                    </div>
-                    <div class="col-sm-6 g-4">
-                        <div id="block" class="product mx-auto mx-md-0"></div>
-                    </div>
-            <div class="row">
-                <div class="col-md-4">
-                    <h3 class="client-header py-4 mx-4">What our clients are saying...</h3>
-                        <ul class="client-list">
-                            <li class="clients-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio, eligendi nihil. Nihil provident tenetur libero? <span class="span-text">-John Smith</span></li>
-                            <li class="clients-text">Tenetur nihil, dignissimos repellendus sed consequuntur harum fugit? Similique commodi at ratione voluptate quam eos. <span class="span-text">-John Smith</span></li>
-                            <li class="clients-text">Sint expedita dolores asperiores dolorum autem accusantium ipsa, aut eos doloribus soluta, saepe pariatur sequi. <span class="span-text">-John Smith</span></li>
-                        </ul>
                 </div>
             </div>
-            </div>
-        </div>
-        </div>
         </div>
         </section>
     </main>
     <footer class="footer" id="footer">
         <div class="container">
             <div class="row">
-                <p class="fs-text text-light">Copyright &copy; 2012 Bloom Landing &middot; All rights reserved</p> 
-                <nav id="bottomNav"> 
-                    <ul class="nav justify-content-end">
-                        <li class="nav-item">
-                            <a href="#" class="nav-link text-light"><i class="bi bi-facebook"></i></a>
-                        </li>
-                        <li class="nav-item">
-                            <a href="#" class="nav-link text-light"><i class="bi bi-twitter"></i></a>
-                        </li>
-                        <li class="nav-item">
-                            <a href="#" class="nav-link text-light"><i class="bi bi-rss-fill"></i></a>
-                        </li>
-                    </ul>
-                </nav>
+                <p class="fs-text text-light py-2">Copyright &copy; 2012 Bloom Landing &middot; All rights reserved</p> 
+                <div class="col-md-11">
+                    <nav id="navBottom"> 
+                        <ul class="nav justify-content-end">
+                            <li class="nav-item">
+                                <a href="#" class="nav-link text-light"><i class="bi bi-facebook"></i></a>
+                            </li>
+                            <li class="nav-item">
+                                <a href="#" class="nav-link text-light"><i class="bi bi-twitter"></i></a>
+                            </li>
+                            <li class="nav-item">
+                                <a href="#" class="nav-link text-light"><i class="bi bi-rss-fill"></i></a>
+                            </li>
+                        </ul>
+                    </nav>
             </div>
         </div>
     </footer>
